// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box component should Exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "as": "div",
    "children": null,
  },
  "render": [Function],
}
`;

exports[`Box component should concat Bulma class with classes in props 1`] = `
<div
  className="loader other-class test"
/>
`;

exports[`Box component should have box classname 1`] = `
<div
  className="loader"
/>
`;

exports[`Box component should have custom inline styles 1`] = `
<section
  className="loader"
  style={
    Object {
      "width": 200,
      "zIndex": 1,
    }
  }
/>
`;

exports[`Box component should render as an html section 1`] = `
<section
  className="loader"
/>
`;
